0.0.3

2021-12-17  Brecht Sanders  https://github.com/brechtsanders/

  * added support for specifying specific paths as command line arguments
  * also search for extensions .ear and .war (instead of just .jar)

0.0.2

2021-12-15  Brecht Sanders  https://github.com/brechtsanders/

  * fix GitHub action to build libdirtrav prerequisite
  * fix undefined HOST_NAME_MAX in macOS
  * add support command line flags (adding dependancy on miniargv)
  * added -o command line flag to specify output file (or - for console)
  * added -p command line flag to create output file parent path if needed
  * added -d command line flag to delete empty output if nothing was found

0.0.1

2021-12-15  Brecht Sanders  https://github.com/brechtsanders/

  * initial release (dumps output to <hostname>.txt in folder of executable)
