@@ -13,11 +13,14 @@
 #endif
 #include <miniargv.h>
 #include <dirtrav.h>
+#include <multifinder.h>
 #include "find_log4j_version.h"
 
 #define PROGRAM_NAME "find_log4j"
 #define PROGRAM_DESC "Tool to search for Apache Log4j Security Vulnerabilities CVE-2021-45046 and CVE-2021-44228"
 #define FILE_EXT ".txt"
+
+#define READBUFFERSIZE 2048
 
 #if defined(_MSC_VER) || (defined(__MINGW32__) && !defined(__MINGW64__))
 #define strcasecmp _stricmp
@@ -39,11 +42,16 @@ static char* strcasestr (const char* haystack, const char* needle)
 }
 #endif
 
+//configuration data structure
 struct config_struct {
   uint64_t count;
   FILE* dst;
+  int simplesearch;
+  multifinder finder;
+  const char* currentpath;
 };
 
+//get position after directory path (including trailing path separator)
 size_t get_path_length_from_path (const char* path)
 {
     size_t pos = strlen(path);
@@ -56,21 +64,48 @@ size_t get_path_length_from_path (const char* path)
     return pos;
 }
 
+//callback function for when match is found in file contents
+int data_found (const char* data, size_t datalen, void* patterncallbackdata, void* callbackdata)
+{
+  struct config_struct* config = (struct config_struct*)callbackdata;
+  config->count++;
+  fprintf(config->dst, "%s\n", config->currentpath);
+  return 1;
+}
+
+//callback function called for each file encountered during file system traversal
 int file_found (dirtrav_entry info)
 {
   //printf("%s\n", info->fullpath); return 0;/////
   struct config_struct* config = (struct config_struct*)info->callbackdata;
   const char* ext = dirtrav_prop_get_extension(info);
-  //if (ext && strcasecmp(ext, ".jar") == 0) {
-  if (ext && (strcasecmp(ext, ".jar") == 0 || strcasecmp(ext, ".ear") == 0 || strcasecmp(ext, ".war") == 0)) {
-    if (strcasestr(dirtrav_prop_get_name(info), "log4j-") != NULL) {
-      config->count++;
-      fprintf(config->dst, "%s\n", info->fullpath);
+  if (config->simplesearch) {
+    if (ext && strcasecmp(ext, ".jar") == 0) {
+      if (strcasestr(dirtrav_prop_get_name(info), "log4j-") != NULL) {
+        config->count++;
+        fprintf(config->dst, "%s\n", info->fullpath);
+      }
+    }
+  } else {
+    if (ext && (strcasecmp(ext, ".jar") == 0 || strcasecmp(ext, ".ear") == 0 || strcasecmp(ext, ".war") == 0)) {
+      FILE* src;
+      if ((src = fopen(info->fullpath, "rb")) != NULL) {
+        char buf[READBUFFERSIZE];
+        size_t buflen;
+        config->currentpath = info->fullpath;
+        while ((buflen = fread(buf, 1, READBUFFERSIZE, src)) > 0) {
+          multifinder_process(config->finder, buf, buflen);
+        }
+        multifinder_finalize(config->finder);
+        fclose(src);
+      }
+      multifinder_reset(config->finder);
     }
   }
   return 0;
 }
 
+//callback function called before each folder encountered during file system traversal
 #ifdef _WIN32
 #define folder_found NULL
 #else
@@ -82,12 +117,14 @@ int folder_found (dirtrav_entry info)
 }
 #endif
 
+//callback function called for each command line argument
 int scan_path (const miniargv_definition* argdef, const char* value, void* callbackdata)
 {
   //printf("%s\n", value); return 0;/////
   return dirtrav_traverse_directory(value, file_found, folder_found, NULL, callbackdata);
 }
 
+//callback function called for each drive letter on Windows or / on other platforms
 int scan_root (dirtrav_entry info)
 {
   //printf("%s\n", info->fullpath); return 0;/////
@@ -103,16 +140,20 @@ int main (int argc, char *argv[], char *envp[])
   char* dstfilename = NULL;
   struct config_struct config = {
     .count = 0,
-    .dst = stdout
+    .dst = stdout,
+    .simplesearch = 0,
+    .finder = NULL,
+    .currentpath = NULL
   };
   //definition of command line arguments
   const miniargv_definition argdef[] = {
-    {'h', "help",            NULL,   miniargv_cb_increment_int, &showhelp,         "show command line help"},
-    {'v', "version",         NULL,   miniargv_cb_increment_int, &showversion,      "show program version"},
-    {'o', "output",          "FILE", miniargv_cb_strdup,        &dstfilename,      "file where to write output to (\"-\" for console)\nif not specified a file <hostname>.txt will be created in the same folder as the executable file"},
-    {'p', "parent",          NULL,   miniargv_cb_increment_int, &createparentpath, "create directory output file if it doesn't exist yet"},
-    {'d', "delete",          NULL,   miniargv_cb_increment_int, &deleteifempty,    "delete output file if nothing was found"},
-    {0,   NULL,              "PATH", scan_path,                 NULL,              "path(s) to scan (default is to scan all disks)"},
+    {'h', "help",            NULL,   miniargv_cb_increment_int, &showhelp,            "show command line help"},
+    {'v', "version",         NULL,   miniargv_cb_increment_int, &showversion,         "show program version"},
+    {'o', "output",          "FILE", miniargv_cb_strdup,        &dstfilename,         "file where to write output to (\"-\" for console)\nif not specified a file <hostname>.txt will be created in the same folder as the executable file"},
+    {'p', "parent",          NULL,   miniargv_cb_increment_int, &createparentpath,    "create directory output file if it doesn't exist yet"},
+    {'d', "delete",          NULL,   miniargv_cb_increment_int, &deleteifempty,       "delete output file if nothing was found"},
+    {'s', "simple",          NULL,   miniargv_cb_increment_int, &config.simplesearch, "perform simple search (filenames matching \"*log4j-*.jar\")\nthe default is to search the contents of all \"*.jar\", \".ear\" and \".war\" files for \"JndiLookup.class\""},
+    {0,   NULL,              "PATH", scan_path,                 NULL,                 "path(s) to scan (default is to scan all disks)"},
     {0, NULL, NULL, NULL, NULL, NULL}
   };
   //parse environment and command line flags
@@ -169,6 +210,15 @@ int main (int argc, char *argv[], char *envp[])
     strcpy(dstfilename + pos, hostname);
     strcpy(dstfilename + pos + strlen(hostname), FILE_EXT);
   }
+  //initialize search if needed
+  if (!config.simplesearch) {
+    if ((config.finder = multifinder_create(data_found, NULL, &config)) != NULL) {
+      multifinder_add_pattern(config.finder, "JndiLookup.class", MULTIFIND_PATTERN_CASE_SENSITIVE, NULL);
+    } else {
+      fprintf(stderr, "Error initializing search, falling back to simple search\n");
+      config.simplesearch = 0;
+    }
+  }
 
   //try to get elevated access
   dirtrav_elevate_access();
@@ -209,6 +259,9 @@ int main (int argc, char *argv[], char *envp[])
   //report number of files found
   printf("Files found: %" PRIu64 "\n", config.count);
 
+  //clean up
+  if (config.finder)
+    multifinder_free(config.finder);
   return 0;
 }
 
